lab3/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instruction
Rule 3     instructions_opt -> <empty>
Rule 4     instructions_opt -> instructions_opt instruction
Rule 5     instructions -> instruction
Rule 6     instructions -> instructions instruction
Rule 7     instruction -> RETURN expression ;
Rule 8     instruction -> CONTINUE ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> print_statement
Rule 11    instruction -> assignment
Rule 12    instruction -> for_statement
Rule 13    instruction -> while_statement
Rule 14    instruction -> if_statement
Rule 15    instruction -> { instructions }
Rule 16    instruction -> ;
Rule 17    if_statement -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 18    if_statement -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 19    while_statement -> WHILE ( condition ) instruction
Rule 20    for_statement -> FOR ID = range instruction
Rule 21    range -> expression : expression
Rule 22    print_statement -> PRINT print_list ;
Rule 23    print_list -> expression
Rule 24    print_list -> print_list , expression
Rule 25    expression -> matrix_function
Rule 26    expression -> variable
Rule 27    expression -> STRING
Rule 28    expression -> FLOATNUM
Rule 29    expression -> INTNUM
Rule 30    expression -> ( expression )
Rule 31    expression -> expression '  [precedence=nonassoc, level=6]
Rule 32    expression -> [ matrix_rows ]
Rule 33    expression -> - expression  [precedence=left, level=4]
Rule 34    expression -> expression DOTDIV expression  [precedence=left, level=5]
Rule 35    expression -> expression DOTMUL expression  [precedence=left, level=5]
Rule 36    expression -> expression DOTSUB expression  [precedence=left, level=4]
Rule 37    expression -> expression DOTADD expression  [precedence=left, level=4]
Rule 38    expression -> expression / expression  [precedence=left, level=5]
Rule 39    expression -> expression * expression  [precedence=left, level=5]
Rule 40    expression -> expression - expression  [precedence=left, level=4]
Rule 41    expression -> expression + expression  [precedence=left, level=4]
Rule 42    variable -> matrix_access
Rule 43    variable -> ID
Rule 44    assignment -> variable DIVASSIGN expression ;
Rule 45    assignment -> variable MULASSIGN expression ;
Rule 46    assignment -> variable SUBASSIGN expression ;
Rule 47    assignment -> variable ADDASSIGN expression ;
Rule 48    assignment -> variable = expression ;
Rule 49    matrix_function -> EYE ( INTNUM )
Rule 50    matrix_function -> ONES ( INTNUM )
Rule 51    matrix_function -> ZEROS ( INTNUM )
Rule 52    matrix_access -> ID [ index_list ]
Rule 53    index_list -> index
Rule 54    index_list -> index_list , index
Rule 55    index -> expression
Rule 56    matrix_rows -> matrix_row
Rule 57    matrix_rows -> matrix_rows ; matrix_row
Rule 58    matrix_row -> [ number_list ]
Rule 59    number_list -> signed_number
Rule 60    number_list -> number_list , signed_number
Rule 61    signed_number -> - number  [precedence=left, level=4]
Rule 62    signed_number -> number
Rule 63    number -> INTNUM
Rule 64    number -> FLOATNUM
Rule 65    condition -> expression NE expression  [precedence=nonassoc, level=3]
Rule 66    condition -> expression EQ expression  [precedence=nonassoc, level=3]
Rule 67    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 68    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 69    condition -> expression > expression  [precedence=nonassoc, level=3]
Rule 70    condition -> expression < expression  [precedence=nonassoc, level=3]

Terminals, with rules where they appear:

'                    : 31
(                    : 17 18 19 30 49 50 51
)                    : 17 18 19 30 49 50 51
*                    : 39
+                    : 41
,                    : 24 54 60
-                    : 33 40 61
/                    : 38
:                    : 21
;                    : 7 8 9 16 22 44 45 46 47 48 57
<                    : 70
=                    : 20 48
>                    : 69
ADDASSIGN            : 47
BREAK                : 9
CONTINUE             : 8
DIVASSIGN            : 44
DOTADD               : 37
DOTDIV               : 34
DOTMUL               : 35
DOTSUB               : 36
ELSE                 : 18
EQ                   : 66
EYE                  : 49
FLOATNUM             : 28 64
FOR                  : 20
GE                   : 67
ID                   : 20 43 52
IF                   : 17 18
INTNUM               : 29 49 50 51 63
LE                   : 68
MULASSIGN            : 45
NE                   : 65
ONES                 : 50
PRINT                : 22
RETURN               : 7
STRING               : 27
SUBASSIGN            : 46
WHILE                : 19
ZEROS                : 51
[                    : 32 52 58
]                    : 32 52 58
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear:

assignment           : 11
condition            : 17 18 19
expression           : 7 21 21 23 24 30 31 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 44 45 46 47 48 55 65 65 66 66 67 67 68 68 69 69 70 70
for_statement        : 12
if_statement         : 14
index                : 53 54
index_list           : 52 54
instruction          : 2 4 5 6 17 18 18 19 20
instructions         : 6 15
instructions_opt     : 1 4
matrix_access        : 42
matrix_function      : 25
matrix_row           : 56 57
matrix_rows          : 32 57
number               : 61 62
number_list          : 58 60
print_list           : 22 24
print_statement      : 10
program              : 0
range                : 20
signed_number        : 59 60
variable             : 26 44 45 46 47 48
while_statement      : 13


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instruction
    (3) instructions_opt -> .
    (4) instructions_opt -> . instructions_opt instruction
    (7) instruction -> . RETURN expression ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . print_statement
    (11) instruction -> . assignment
    (12) instruction -> . for_statement
    (13) instruction -> . while_statement
    (14) instruction -> . if_statement
    (15) instruction -> . { instructions }
    (16) instruction -> . ;
    (22) print_statement -> . PRINT print_list ;
    (44) assignment -> . variable DIVASSIGN expression ;
    (45) assignment -> . variable MULASSIGN expression ;
    (46) assignment -> . variable SUBASSIGN expression ;
    (47) assignment -> . variable ADDASSIGN expression ;
    (48) assignment -> . variable = expression ;
    (20) for_statement -> . FOR ID = range instruction
    (19) while_statement -> . WHILE ( condition ) instruction
    (17) if_statement -> . IF ( condition ) instruction
    (18) if_statement -> . IF ( condition ) instruction ELSE instruction
    (42) variable -> . matrix_access
    (43) variable -> . ID
    (52) matrix_access -> . ID [ index_list ]
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for { resolved as shift
  ! shift/reduce conflict for ; resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    $end            reduce using rule 3 (instructions_opt -> .)
    RETURN          shift and go to state 4
    CONTINUE        shift and go to state 6
    BREAK           shift and go to state 7
    {               shift and go to state 13
    ;               shift and go to state 5
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instruction                    shift and go to state 3
    print_statement                shift and go to state 8
    assignment                     shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    variable                       shift and go to state 15
    matrix_access                  shift and go to state 20

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    (4) instructions_opt -> instructions_opt . instruction
    (7) instruction -> . RETURN expression ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . print_statement
    (11) instruction -> . assignment
    (12) instruction -> . for_statement
    (13) instruction -> . while_statement
    (14) instruction -> . if_statement
    (15) instruction -> . { instructions }
    (16) instruction -> . ;
    (22) print_statement -> . PRINT print_list ;
    (44) assignment -> . variable DIVASSIGN expression ;
    (45) assignment -> . variable MULASSIGN expression ;
    (46) assignment -> . variable SUBASSIGN expression ;
    (47) assignment -> . variable ADDASSIGN expression ;
    (48) assignment -> . variable = expression ;
    (20) for_statement -> . FOR ID = range instruction
    (19) while_statement -> . WHILE ( condition ) instruction
    (17) if_statement -> . IF ( condition ) instruction
    (18) if_statement -> . IF ( condition ) instruction ELSE instruction
    (42) variable -> . matrix_access
    (43) variable -> . ID
    (52) matrix_access -> . ID [ index_list ]
    $end            reduce using rule 1 (program -> instructions_opt .)
    RETURN          shift and go to state 4
    CONTINUE        shift and go to state 6
    BREAK           shift and go to state 7
    {               shift and go to state 13
    ;               shift and go to state 5
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    instruction                    shift and go to state 21
    print_statement                shift and go to state 8
    assignment                     shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    variable                       shift and go to state 15
    matrix_access                  shift and go to state 20

state 3

    (2) instructions_opt -> instruction .
    RETURN          reduce using rule 2 (instructions_opt -> instruction .)
    CONTINUE        reduce using rule 2 (instructions_opt -> instruction .)
    BREAK           reduce using rule 2 (instructions_opt -> instruction .)
    {               reduce using rule 2 (instructions_opt -> instruction .)
    ;               reduce using rule 2 (instructions_opt -> instruction .)
    PRINT           reduce using rule 2 (instructions_opt -> instruction .)
    FOR             reduce using rule 2 (instructions_opt -> instruction .)
    WHILE           reduce using rule 2 (instructions_opt -> instruction .)
    IF              reduce using rule 2 (instructions_opt -> instruction .)
    ID              reduce using rule 2 (instructions_opt -> instruction .)
    $end            reduce using rule 2 (instructions_opt -> instruction .)


state 4

    (7) instruction -> RETURN . expression ;
    (25) expression -> . matrix_function
    (26) expression -> . variable
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    (30) expression -> . ( expression )
    (31) expression -> . expression '
    (32) expression -> . [ matrix_rows ]
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (49) matrix_function -> . EYE ( INTNUM )
    (50) matrix_function -> . ONES ( INTNUM )
    (51) matrix_function -> . ZEROS ( INTNUM )
    (42) variable -> . matrix_access
    (43) variable -> . ID
    (52) matrix_access -> . ID [ index_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    -               shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    ID              shift and go to state 17

    expression                     shift and go to state 22
    matrix_function                shift and go to state 23
    variable                       shift and go to state 24
    matrix_access                  shift and go to state 20

state 5

    (16) instruction -> ; .
    RETURN          reduce using rule 16 (instruction -> ; .)
    CONTINUE        reduce using rule 16 (instruction -> ; .)
    BREAK           reduce using rule 16 (instruction -> ; .)
    {               reduce using rule 16 (instruction -> ; .)
    ;               reduce using rule 16 (instruction -> ; .)
    PRINT           reduce using rule 16 (instruction -> ; .)
    FOR             reduce using rule 16 (instruction -> ; .)
    WHILE           reduce using rule 16 (instruction -> ; .)
    IF              reduce using rule 16 (instruction -> ; .)
    ID              reduce using rule 16 (instruction -> ; .)
    $end            reduce using rule 16 (instruction -> ; .)
    }               reduce using rule 16 (instruction -> ; .)
    ELSE            reduce using rule 16 (instruction -> ; .)


state 6

    (8) instruction -> CONTINUE . ;
    ;               shift and go to state 34


state 7

    (9) instruction -> BREAK . ;
    ;               shift and go to state 35


state 8

    (10) instruction -> print_statement .
    RETURN          reduce using rule 10 (instruction -> print_statement .)
    CONTINUE        reduce using rule 10 (instruction -> print_statement .)
    BREAK           reduce using rule 10 (instruction -> print_statement .)
    {               reduce using rule 10 (instruction -> print_statement .)
    ;               reduce using rule 10 (instruction -> print_statement .)
    PRINT           reduce using rule 10 (instruction -> print_statement .)
    FOR             reduce using rule 10 (instruction -> print_statement .)
    WHILE           reduce using rule 10 (instruction -> print_statement .)
    IF              reduce using rule 10 (instruction -> print_statement .)
    ID              reduce using rule 10 (instruction -> print_statement .)
    $end            reduce using rule 10 (instruction -> print_statement .)
    }               reduce using rule 10 (instruction -> print_statement .)
    ELSE            reduce using rule 10 (instruction -> print_statement .)


state 9

    (11) instruction -> assignment .
    RETURN          reduce using rule 11 (instruction -> assignment .)
    CONTINUE        reduce using rule 11 (instruction -> assignment .)
    BREAK           reduce using rule 11 (instruction -> assignment .)
    {               reduce using rule 11 (instruction -> assignment .)
    ;               reduce using rule 11 (instruction -> assignment .)
    PRINT           reduce using rule 11 (instruction -> assignment .)
    FOR             reduce using rule 11 (instruction -> assignment .)
    WHILE           reduce using rule 11 (instruction -> assignment .)
    IF              reduce using rule 11 (instruction -> assignment .)
    ID              reduce using rule 11 (instruction -> assignment .)
    $end            reduce using rule 11 (instruction -> assignment .)
    }               reduce using rule 11 (instruction -> assignment .)
    ELSE            reduce using rule 11 (instruction -> assignment .)


state 10

    (12) instruction -> for_statement .
    RETURN          reduce using rule 12 (instruction -> for_statement .)
    CONTINUE        reduce using rule 12 (instruction -> for_statement .)
    BREAK           reduce using rule 12 (instruction -> for_statement .)
    {               reduce using rule 12 (instruction -> for_statement .)
    ;               reduce using rule 12 (instruction -> for_statement .)
    PRINT           reduce using rule 12 (instruction -> for_statement .)
    FOR             reduce using rule 12 (instruction -> for_statement .)
    WHILE           reduce using rule 12 (instruction -> for_statement .)
    IF              reduce using rule 12 (instruction -> for_statement .)
    ID              reduce using rule 12 (instruction -> for_statement .)
    $end            reduce using rule 12 (instruction -> for_statement .)
    }               reduce using rule 12 (instruction -> for_statement .)
    ELSE            reduce using rule 12 (instruction -> for_statement .)


state 11

    (13) instruction -> while_statement .
    RETURN          reduce using rule 13 (instruction -> while_statement .)
    CONTINUE        reduce using rule 13 (instruction -> while_statement .)
    BREAK           reduce using rule 13 (instruction -> while_statement .)
    {               reduce using rule 13 (instruction -> while_statement .)
    ;               reduce using rule 13 (instruction -> while_statement .)
    PRINT           reduce using rule 13 (instruction -> while_statement .)
    FOR             reduce using rule 13 (instruction -> while_statement .)
    WHILE           reduce using rule 13 (instruction -> while_statement .)
    IF              reduce using rule 13 (instruction -> while_statement .)
    ID              reduce using rule 13 (instruction -> while_statement .)
    $end            reduce using rule 13 (instruction -> while_statement .)
    }               reduce using rule 13 (instruction -> while_statement .)
    ELSE            reduce using rule 13 (instruction -> while_statement .)


state 12

    (14) instruction -> if_statement .
    RETURN          reduce using rule 14 (instruction -> if_statement .)
    CONTINUE        reduce using rule 14 (instruction -> if_statement .)
    BREAK           reduce using rule 14 (instruction -> if_statement .)
    {               reduce using rule 14 (instruction -> if_statement .)
    ;               reduce using rule 14 (instruction -> if_statement .)
    PRINT           reduce using rule 14 (instruction -> if_statement .)
    FOR             reduce using rule 14 (instruction -> if_statement .)
    WHILE           reduce using rule 14 (instruction -> if_statement .)
    IF              reduce using rule 14 (instruction -> if_statement .)
    ID              reduce using rule 14 (instruction -> if_statement .)
    $end            reduce using rule 14 (instruction -> if_statement .)
    }               reduce using rule 14 (instruction -> if_statement .)
    ELSE            reduce using rule 14 (instruction -> if_statement .)


state 13

    (15) instruction -> { . instructions }
    (5) instructions -> . instruction
    (6) instructions -> . instructions instruction
    (7) instruction -> . RETURN expression ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . print_statement
    (11) instruction -> . assignment
    (12) instruction -> . for_statement
    (13) instruction -> . while_statement
    (14) instruction -> . if_statement
    (15) instruction -> . { instructions }
    (16) instruction -> . ;
    (22) print_statement -> . PRINT print_list ;
    (44) assignment -> . variable DIVASSIGN expression ;
    (45) assignment -> . variable MULASSIGN expression ;
    (46) assignment -> . variable SUBASSIGN expression ;
    (47) assignment -> . variable ADDASSIGN expression ;
    (48) assignment -> . variable = expression ;
    (20) for_statement -> . FOR ID = range instruction
    (19) while_statement -> . WHILE ( condition ) instruction
    (17) if_statement -> . IF ( condition ) instruction
    (18) if_statement -> . IF ( condition ) instruction ELSE instruction
    (42) variable -> . matrix_access
    (43) variable -> . ID
    (52) matrix_access -> . ID [ index_list ]
    RETURN          shift and go to state 4
    CONTINUE        shift and go to state 6
    BREAK           shift and go to state 7
    {               shift and go to state 13
    ;               shift and go to state 5
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    instructions                   shift and go to state 36
    instruction                    shift and go to state 37
    print_statement                shift and go to state 8
    assignment                     shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    if_statement                   shift and go to state 12
    variable                       shift and go to state 15
    matrix_access                  shift and go to state 20

state 14

    (22) print_statement -> PRINT . print_list ;
    (23) print_list -> . expression
    (24) print_list -> . print_list , expression
    (25) expression -> . matrix_function
    (26) expression -> . variable
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    (30) expression -> . ( expression )
    (31) expression -> . expression '
    (32) expression -> . [ matrix_rows ]
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (49) matrix_function -> . EYE ( INTNUM )
    (50) matrix_function -> . ONES ( INTNUM )
    (51) matrix_function -> . ZEROS ( INTNUM )
    (42) variable -> . matrix_access
    (43) variable -> . ID
    (52) matrix_access -> . ID [ index_list ]
    STRING          shift and go to state 25
    FLOATNUM        shift and go to state 26
    INTNUM          shift and go to state 27
    (               shift and go to state 28
    [               shift and go to state 29
    -               shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    ID              shift and go to state 17

    print_list                     shift and go to state 38
    expression                     shift and go to state 39
    matrix_function                shift and go to state 23
    variable                       shift and go to state 24
    matrix_access                  shift and go to state 20

state 15

    (44) assignment -> variable . DIVASSIGN expression ;
    (45) assignment -> variable . MULASSIGN expression ;
    (46) assignment -> variable . SUBASSIGN expression ;
    (47) assignment -> variable . ADDASSIGN expression ;
    (48) assignment -> variable . = expression ;
    DIVASSIGN       shift and go to state 40
    MULASSIGN       shift and go to state 41
    SUBASSIGN       shift and go to state 42
    ADDASSIGN       shift and go to state 43
    =               shift and go to state 44


state 16

    (20) for_statement -> FOR . ID = range instruction
    ID              shift and go to state 45


state 17

    (43) variable -> ID .
    (52) matrix_access -> ID . [ index_list ]
    DIVASSIGN       reduce using rule 43 (variable -> ID .)
    MULASSIGN       reduce using rule 43 (variable -> ID .)
    SUBASSIGN       reduce using rule 43 (variable -> ID .)
    ADDASSIGN       reduce using rule 43 (variable -> ID .)
    =               reduce using rule 43 (variable -> ID .)
    ;               reduce using rule 43 (variable -> ID .)
    '               reduce using rule 43 (variable -> ID .)
    DOTDIV          reduce using rule 43 (variable -> ID .)
    DOTMUL          reduce using rule 43 (variable -> ID .)
    DOTSUB          reduce using rule 43 (variable -> ID .)
    DOTADD          reduce using rule 43 (variable -> ID .)
    /               reduce using rule 43 (variable -> ID .)
    *               reduce using rule 43 (variable -> ID .)
    -               reduce using rule 43 (variable -> ID .)
    +               reduce using rule 43 (variable -> ID .)
    ,               reduce using rule 43 (variable -> ID .)
    )               reduce using rule 43 (variable -> ID .)
    ]               reduce using rule 43 (variable -> ID .)
    NE              reduce using rule 43 (variable -> ID .)
    EQ              reduce using rule 43 (variable -> ID .)
    GE              reduce using rule 43 (variable -> ID .)
    LE              reduce using rule 43 (variable -> ID .)
    >               reduce using rule 43 (variable -> ID .)
    <               reduce using rule 43 (variable -> ID .)
    :               reduce using rule 43 (variable -> ID .)
    RETURN          reduce using rule 43 (variable -> ID .)
    CONTINUE        reduce using rule 43 (variable -> ID .)
    BREAK           reduce using rule 43 (variable -> ID .)
    {               reduce using rule 43 (variable -> ID .)
    PRINT           reduce using rule 43 (variable -> ID .)
    FOR             reduce using rule 43 (variable -> ID .)
    WHILE           reduce using rule 43 (variable -> ID .)
    IF              reduce using rule 43 (variable -> ID .)
    ID              reduce using rule 43 (variable -> ID .)
    [               shift and go to state 46


state 18

    (19) while_statement -> WHILE . ( condition ) instruction
    (               shift and go to state 47


state 19

    (17) if_statement -> IF . ( condition ) instruction
    (18) if_statement -> IF . ( condition ) instruction ELSE instruction
    (               shift and go to state 48


state 20

    (42) variable -> matrix_access .
    DIVASSIGN       reduce using rule 42 (variable -> matrix_access .)
    MULASSIGN       reduce using rule 42 (variable -> matrix_access .)
    SUBASSIGN       reduce using rule 42 (variable -> matrix_access .)
    ADDASSIGN       reduce using rule 42 (variable -> matrix_access .)
    =               reduce using rule 42 (variable -> matrix_access .)
    ;               reduce using rule 42 (variable -> matrix_access .)
    '               reduce using rule 42 (variable -> matrix_access .)
    DOTDIV          reduce using rule 42 (variable -> matrix_access .)
    DOTMUL          reduce using rule 42 (variable -> matrix_access .)
    DOTSUB          reduce using rule 42 (variable -> matrix_access .)
    DOTADD          reduce using rule 42 (variable -> matrix_access .)
    /               reduce using rule 42 (variable -> matrix_access .)
    *               reduce using rule 42 (variable -> matrix_access .)
    -               reduce using rule 42 (variable -> matrix_access .)
    +               reduce using rule 42 (variable -> matrix_access .)
    ,               reduce using rule 42 (variable -> matrix_access .)
    )               reduce using rule 42 (variable -> matrix_access .)
    ]               reduce using rule 42 (variable -> matrix_access .)
    NE              reduce using rule 42 (variable -> matrix_access .)
    EQ              reduce using rule 42 (variable -> matrix_access .)
    GE              reduce using rule 42 (variable -> matrix_access .)
    LE              reduce using rule 42 (variable -> matrix_access .)
    >               reduce using rule 42 (variable -> matrix_access .)
    <               reduce using rule 42 (variable -> matrix_access .)
    :               reduce using rule 42 (variable -> matrix_access .)
    RETURN          reduce using rule 42 (variable -> matrix_access .)
    CONTINUE        reduce using rule 42 (variable -> matrix_access .)
    BREAK           reduce using rule 42 (variable -> matrix_access .)
    {               reduce using rule 42 (variable -> matrix_access .)
    PRINT           reduce using rule 42 (variable -> matrix_access .)
    FOR             reduce using rule 42 (variable -> matrix_access .)
    WHILE           reduce using rule 42 (variable -> matrix_access .)
    IF              reduce using rule 42 (variable -> matrix_access .)
    ID              reduce using rule 42 (variable -> matrix_access .)


state 21

    (4) instructions_opt -> instructions_opt instruction .
    RETURN          reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    CONTINUE        reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    BREAK           reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    {               reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    ;               reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    PRINT           reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    FOR             reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    WHILE           reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    IF              reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    ID              reduce using rule 4 (instructions_opt -> instructions_opt instruction .)
    $end            reduce using rule 4 (instructions_opt -> instructions_opt instruction .)


state 22

    (7) instruction -> RETURN expression . ;
    (31) expression -> expression . '
    (34) expression -> expression . DOTDIV expression
    (35) expression -> expression . DOTMUL expression
    (36) expression -> expression . DOTSUB expression
    (37) expression -> expression . DOTADD expression
    (38) expression -> expression . / expression
    (39) expression -> expression . * expression
    (40) expression -> expression . - expression
    (41) expression -> expression . + expression
    ;               shift and go to state 49
    '               shift and go to state 50
    DOTDIV          shift and go to state 51
    DOTMUL          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTADD          shift and go to state 54
    /               shift and go to state 55
    *               shift and go to state 56
    -               shift and go to state 57
    +               shift and go to state 58


state 23

    (25) expression -> matrix_function .
    ;               reduce using rule 25 (expression -> matrix_function .)
    '               reduce using rule 25 (expression -> matrix_function .)
    DOTDIV          reduce using rule 25 (expression -> matrix_function .)
    DOTMUL          reduce using rule 25 (expression -> matrix_function .)
    DOTSUB          reduce using rule 25 (expression -> matrix_function .)
    DOTADD          reduce using rule 25 (expression -> matrix_function .)
    /               reduce using rule 25 (expression -> matrix_function .)
    *               reduce using rule 25 (expression -> matrix_function .)
    -               reduce using rule 25 (expression -> matrix_function .)
    +               reduce using rule 25 (expression -> matrix_function .)
    ,               reduce using rule 25 (expression -> matrix_function .)
    )               reduce using rule 25 (expression -> matrix_function .)
    ]               reduce using rule 25 (expression -> matrix_function .)
    NE              reduce using rule 25 (expression -> matrix_function .)
    EQ              reduce using rule 25 (expression -> matrix_function .)
    GE              reduce using rule 25 (expression -> matrix_function .)
    LE              reduce using rule 25 (expression -> matrix_function .)
    >               reduce using rule 25 (expression -> matrix_function .)
    <               reduce using rule 25 (expression -> matrix_function .)
    :               reduce using rule 25 (expression -> matrix_function .)
    RETURN          reduce using rule 25 (expression -> matrix_function .)
    CONTINUE        reduce using rule 25 (expression -> matrix_function .)
    BREAK           reduce using rule 25 (expression -> matrix_function .)
    {               reduce using rule 25 (expression -> matrix_function .)
    PRINT           reduce using rule 25 (expression -> matrix_function .)
    FOR             reduce using rule 25 (expression -> matrix_function .)
    WHILE           reduce using rule 25 (expression -> matrix_function .)
    IF              reduce using rule 25 (expression -> matrix_function .)
    ID              reduce using rule 25 (expression -> matrix_function .)


state 24

    (26) expression -> variable .
    ;               reduce using rule 26 (expression -> variable .)
    '               reduce using rule 26 (expression -> variable .)
    DOTDIV          reduce using rule 26 (expression -> variable .)
    DOTMUL          reduce using rule 26 (expression -> variable .)
    DOTSUB          reduce using rule 26 (expression -> variable .)
    DOTADD          reduce using rule 26 (expression -> variable .)
    /               reduce using rule 26 (expression -> variable .)
    *               reduce using rule 26 (expression -> variable .)
    -               reduce using rule 26 (expression -> variable .)
    +               reduce using rule 26 (expression -> variable .)
    ,               reduce using rule 26 (expression -> variable .)
    )               reduce using rule 26 (expression -> variable .)
    ]               reduce using rule 26 (expression -> variable .)
    NE              reduce using rule 26 (expression -> variable .)
    EQ              reduce using rule 26 (expression -> variable .)
    GE              reduce using rule 26 (expression -> variable .)
    LE              reduce using rule 26 (expression -> variable .)
    >               reduce using rule 26 (expression -> variable .)
    <               reduce using rule 26 (expression -> variable .)
    :               reduce using rule 26 (expression -> variable .)
    RETURN          reduce using rule 26 (expression -> variable .)
    CONTINUE        reduce using rule 26 (expression -> variable .)
    BREAK           reduce using rule 26 (expression -> variable .)
    {               reduce using rule 26 (expression -> variable .)
    PRINT           reduce using rule 26 (expression -> variable .)
    FOR             reduce using rule 26 (expression -> variable .)
    WHILE           reduce using rule 26 (expression -> variable .)
    IF              reduce using rule 26 (expression -> variable .)
    ID              reduce using rule 26 (expression -> variable .)


state 25

    (27) expression -> STRING .
    ;               reduce using rule 27 (expression -> STRING .)
    '               reduce using rule 27 (expression -> STRING .)
    DOTDIV          reduce using rule 27 (expression -> STRING .)
    DOTMUL          reduce using rule 27 (expression -> STRING .)
    DOTSUB          reduce using rule 27 (expression -> STRING .)
    DOTADD          reduce using rule 27 (expression -> STRING .)
    /               reduce using rule 27 (expression -> STRING .)
    *               reduce using rule 27 (expression -> STRING .)
    -               reduce using rule 27 (expression -> STRING .)
    +               reduce using rule 27 (expression -> STRING .)
    ,               reduce using rule 27 (expression -> STRING .)
    )               reduce using rule 27 (expression -> STRING .)
    ]               reduce using rule 27 (expression -> STRING .)
    NE              reduce using rule 27 (expression -> STRING .)
    EQ              reduce using rule 27 (expression -> STRING .)
    GE              reduce using rule 27 (expression -> STRING .)
    LE              reduce using rule 27 (expression -> STRING .)
    >               reduce using rule 27 (expression -> STRING .)
    <               reduce using rule 27 (expression -> STRING .)
    :               reduce using rule 27 (expression -> STRING .)
    RETURN          reduce using rule 27 (expression -> STRING .)
    CONTINUE        reduce using rule 27 (expression -> STRING .)
    BREAK           reduce using rule 27 (expression -> STRING .)
    {               reduce using rule 27 (expression -> STRING .)
    PRINT           reduce using rule 27 (expression -> STRING .)
    FOR             reduce using rule 27 (expression -> STRING .)
    WHILE           reduce using rule 27 (expression -> STRING .)
    IF              reduce using rule 27 (expression -> STRING .)
    ID              reduce using rule 27 (expression -> STRING .)


state 26
